--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@ Fuel moisture content (FMC) is a key predictor of predicting wildfire rate of sp
     \item \textbf{FMC:} Fuel Moisture Content, a ratio interpretable as a percentage of the weight of water in a stick relative to the weight of the stick.
     \item \textbf{ROS:} Fire Rate of Spread, units of meters per second.
     \item \textbf{Response Variable:} the variable that is being modeled, or the output of the model.
-    \item \textbf{Predictors:} data used to predict the response variable. Also known as predictors, covariates, etc.
+    \item \textbf{Predictors:} data variables used to predict the response variable. Also known as features, covariates, etc.
     \item \textbf{Residual:} the difference between the predicted values of a model and the observed response value.
 \end{itemize}
 
@@ -334,7 +334,8 @@ For this project, the following loss functions will be compared:
 
 The goal of this project is to analyze the effect of using the custom loss functions for training machine learning models of FMC. Several different machine learning models will be considered in order to examine whether the custom loss functions have a similar effect across different model architectures. The models used in this project will be linear regression, XGBoost, and Random Forest.\footnote{See Appendix \ref{app:ml} for more information on the models.} These models have been tested by other researchers looking in the FMC modeling literature. \cite{Lee-2020-EFM,McCandless-2020-EWS, Schreck-2023-MLV}
 
-For each model, the same sets of training and testing data will be used. Hyperparameter selection is important for machine learning models, and in this project a simple manual grid search was conducted. Further research will utilize a more systematic approach to hyperparameter selection. 
+For each model, the same sets of training and testing data will be used. Each model will therefore be modeling the same functional mapping from the predictors at time $t$ to the response variable at time $t$.\footnote{The day of the year of the hour of the day are used as predictors, but this is different from a recursive model like a RNN or an autoregressive model.} Hyperparameter selection is important for machine learning models,\footnote{Hyperparameters in the context of machine learning are fixed parameters that are not updated in the training processes. Adjusting hyperparameters is known as ``tuning", and requires repeatedly training the model and evaluating forecast accuracy.} and in this project a simple manual grid search was conducted. Further research will utilize a more systematic approach to hyperparameter selection. 
+
 
 \subsection{Model Evaluation}
 
@@ -347,11 +348,17 @@ In statistics, cross-validation refers to a set of methods used for evaluating m
 
 In the context of FMC modeling, the models are spatiotemporal in nature, or the models predict values at a specific time for a specific location in space. Cross-validation procedures must be formulated carefully to avoid data leakage. The typical approach in machine learning would be to take a random sample of all of the data and hold some portion out to use as a test set. This method would typically lead to data leakage in the spatiotemporal context. To get a meaningful estimate of model accuracy, the test set must consist of observations at locations not included in the training set. Additionally, the test set should be at times in the future compared to all of the training set. 
 
-In this project, the data was split into training and test sets in the following way. For each month of data, a random sample of 20\% of the unique locations in the data were selected for inclusion in the test set. Then, the final 2 days of observations in that month were selected from those locations. So, 80\% of the unique locations of data were used to fit model parameters, with observations taken from the start of the month through to 2 days before the end of the month.\footnote{This led to 28 or 29 days of training data for all months except February where 27 days of data were used, since 2024 was a leap year with 29 days in February.} Then, the fitted model was used to predict FMC at the 20\% of locations that were held out from training, and at times corresponding to the last two days of the month. 
+In this project, the data was split into training and test sets in the following way. Starting with the earliest record of data,\footnote{After data filters, it was the time: May 17, 2023 at 2:22 UTC.} 30 days worth of data used. For those 30 days of data, a random sample of 20\% of the unique locations in the data were selected for inclusion in the test set. Then, the final 2 days of observations in that 30 day period were selected from those locations. So, 80\% of the unique locations of data over 28 days were used to fit model parameters, with observations taken from the start of the period through to 2 days before the end of the period. Then, the fitted model was used to predict FMC at the 20\% of locations that were held out from training, and at times corresponding to the last two days of the period. After that, the 30 period window is moved 2 days into the future. So the second iteration of test data were the 2 days immediately following the previous 2 days test set. In this way, the test sets had no overlap, but the training sets had at most 26 days of overlap. This led to a total of 167 training and testing periods.
 
-\subsubsection{Loss Function Experimental Design}
 
-Using the data collected from RAWS within the Rocky Mountain GACC, the data was split into training and testing periods using the process described in the previous section. A total of twelve loss functions were considered: the standard MSE, ten weighted schemes with varying $\omega$ parameters, and one with weights determined directly from the ROS transformation of FMC. For each of the twelve loss functions, the three machine learning models described previously were fit to the training set and the fitted model was used to predict new values in the test set. This process is repeated 5 times in order to get different random samples of locations to use in the test set. The model accuracy is calculated by comparing the predicted FMC in the test set to the observed FMC through the root mean squared error (RMSE). The RMSE is useful since it is interpretable in the same units as the response variable, so a RMSE of 4 can be interpreted as the model having on average a 4\% error in the FMC. This process is repeated 5 times in order to get different random samples of locations to use in the test set. 
+
+\subsection{Loss Function Experimental Design}
+
+Using the data collected from RAWS within the Rocky Mountain GACC, the data was split into training and testing periods using the process described in the previous section. A total of twelve loss functions were considered: the standard MSE, ten weighted schemes with varying $\omega$ parameters, and one with weights determined directly from the ROS transformation of FMC. For each of the twelve loss functions, the three machine learning models described previously were fit to the training set and the fitted model was used to predict new values in the test set. 
+
+The model accuracy is calculated by comparing the predicted FMC in the test set to the observed FMC through the root mean squared error (RMSE). The RMSE is useful since it is interpretable in the same units as the response variable, so a RMSE of 4 can be interpreted as the model having on average a 4\% error in the FMC. This process is repeated 5 times in order to get different random samples of locations to use in the test set. 
+
+For the 167 training and testing periods, 3 machine learning models were fit using 12 different loss functions. Thus, 2,004 RMSE calculations were made for each model, for a total of 6,012 RMSE calculations.
 
 \section{Results}
 
@@ -359,7 +366,7 @@ The results of the analysis described above showed that there was a small reduct
 
 To compare the RMSE of predictions from the models trained with different loss functions, the different time periods used for training and testing are considered to be independent realizations of the same data generating process. In other words, the RMSE for the various test periods are aggregated to calculate a mean and standard error of the RMSE. Figure \ref{fig:results1} shows the results aggregated over the time periods. The dots represent the mean RMSE, and the vertical line the standard error of the mean RMSE. On the x-axis, the label ``exp\_0.01" corresponds to the exponentially weighted loss function with weight $w_i = \exp(-0.01\cdot y_i)$, where $y_i$ is the $i^{th}$ response value. The vertical dashed line in the plot is meant to distinguish the ROS weighting scheme from the others. The other loss functions are a continuum; the ``MSE" corresponds to an $\omega$ parameter of zero, and then the $\omega$ parameter increases across the x-axis until ``exp\_0.25", which corresponds to $\omega=0.25$. The weighting scheme using the ROS curve is separate from this continuum. The left side of Figure \ref{fig:results1} shows the results of the trained models when predicting the untransformed FMC values. The right side shows the results of the models when predicting the transformed ROS response.
 
-The results for predicting ROS show a U-shaped curve for the weighted loss functions,\footnote{Again, note that the ROS category is not part of this continuum.} where a small amount of weighting of the residuals led to a smaller test RMSE, but when the strength of the weighting scheme increases the accuracy deteriorates. The exponential weighting scheme with $\omega = 0.0367$ resulted in the smallest test RMSE for ROS predictions. These results were small, however, representing just over a 1\% reduction in the RMSE compared to the standard MSE loss function, and the results were not statistically significant.\footnote{A two-sample t-test resulted in a p-value of roughly 0.54.} Visually this can be seen the the strong overlap between the standard errors of the means.\footnote{The vertical lines representing standard error overlap.} The RMSE using the ROS for weights had similar very similar results to the minimum RMSE results from the $\omega = 0.0367$ weighting scheme. Figure \ref{fig:results2} in Appendix \ref{app:res} shows the results broken down by machine learning model. The pattern is similar for the different models, supporting the idea that conclusions can be drawn about the loss functions themselves.
+The results for predicting ROS show a U-shaped curve for the weighted loss functions,\footnote{Again, note that the ROS category is not part of this continuum.} where a small amount of weighting of the residuals led to a smaller test RMSE, but when the strength of the weighting scheme increases the accuracy deteriorates. The exponential weighting scheme with $\omega = 0.0367$ resulted in the smallest test RMSE for ROS predictions. These results were small, however, representing just over a 1\% reduction in the RMSE compared to the standard MSE loss function, and the results were not statistically significant.\footnote{A two-sample t-test comparing the RMSE values for the standard MSE loss function and the weighted loss function with $\omega = 0.0367$ resulted in a p-value of roughly 0.54.} Visually this can be seen the the strong overlap between the standard errors of the means.\footnote{The vertical lines representing standard error overlap.} The RMSE using the ROS for weights had similar very similar results to the minimum RMSE results from the $\omega = 0.0367$ weighting scheme. Figure \ref{fig:results2} in Appendix \ref{app:res} shows the results broken down by machine learning model. The pattern is similar for the different models, supporting the idea that conclusions can be drawn about the loss functions themselves.
 
 \begin{figure}[ht]
     \centering
@@ -370,11 +377,11 @@ The results for predicting ROS show a U-shaped curve for the weighted loss funct
 
 \section{Discussion}
 
-The results for the RMSE of the FMC values was unexpected. The MSE as a loss function did not result in the lowest MSE in the test set. Using biased estimators by weighting the loss function resulted in slightly lower RMSE on the test set. A hypothesis to explain this relates to the effect of rain. As was shown in 
+The results for the RMSE of the FMC values was unexpected. The MSE as a loss function did not result in the lowest MSE in the test set. Using biased estimators by weighting the loss function resulted in slightly lower RMSE on the test set. A hypothesis to explain this relates to the effect of rain. As was shown in Figure \ref{fig:fmc_with_rain}, following rain events the FMC spikes up and then quickly falls back down after the rain passes. These events are relatively rare in the data as there are not long sustained periods of nonzero rain. These spikes in FMC following rain are associated with high levels of FMC, which correspondingly receive less weight when using the weighted loss functions. So, the weighted loss functions may have the effect of downweighting ``outlier" events and causing them to have less of an effect on the model predictions. This finding may show that downweighting FMC observations following rain might lead to an overall more accurate model.
 
-This analysis shows that weighted loss functions can produce at least as accurate results as a standard MSE loss function for machine learning models of FMC, when looking at both the prediction accuracy of FMC itself, and of the transformation to ROS. While it cannot be concluded from this analysis that the weighted loss functions actually improved forecast accuracy for ROS, this analysis provides a hint of a signal that this might be useful if applied to real wildfire simulations. If the estimate of a roughly 1\% reduction in error of ROS were true, that might provide a meaningful improvement in wildfire simulations.
+This analysis shows that weighted loss functions can produce at least as accurate results as a standard MSE loss function for machine learning models of FMC, when looking at both the prediction accuracy of FMC itself, and of the transformation to ROS. While it cannot be concluded from this analysis that the weighted loss functions actually improved forecast accuracy for ROS, this analysis provides a hint of a signal that this might be useful if applied to real wildfire simulations. If the estimate of a roughly 1\% reduction in error of ROS were true, that might provide a meaningful improvement in wildfire simulations. This analysis used roughly 1 year of data from the Rocky Mountain region, and a more thorough analysis with data from other time periods and regions of the country could be performed to draw stronger conclusions about the effect of the weighted loss functions.
 
-A number of simplification were used in this analysis. In real-time simulations of wildfires, ROS is a complicated function of local environmental conditions, such as terrain slope. It is not clear how weighted loss functions would perform under more realistic conditions for estimating ROS. The machine learning models used in this report were also not subjected to exhaustive hyperparameter search schemes, and more finely tuned models might intereact with the loss functions differently. Additionally, the models used in this report were static, meaning the time dependence of the system was not explicitly modeled. 
+A number of simplification were used in this analysis. In real-time simulations of wildfires, ROS is a complicated function of local environmental conditions, such as terrain slope. It is not clear how weighted loss functions would perform under more realistic conditions for estimating ROS. The machine learning models used in this report were also not subjected to exhaustive hyperparameter search schemes, and more finely tuned models might interact with the loss functions differently. Additionally, the models used in this report were static, meaning the time dependence of the system was not explicitly modeled. 
 
 Future research could apply the weighting scheme to RNNs or autoregressive models to examine the effect on forecast accuracy. One attractive feature about the weighted loss functions used in this analysis is that they are easy to implement in modern machine learning software packages.\footnote{The neural network software library Tensorflow, for example, has a parameter ``sample\_weight" that easily adds weighting to the standard MSE loss function.} A longer-term goal would be to run multiple real wildfire simulations, using a platform like WRF-SFIRE, with different estimates of FMC produced by models using different loss functions.
 
@@ -395,6 +402,66 @@ Future research could apply the weighting scheme to RNNs or autoregressive model
 
 \section{Further Results}
 \label{app:res}
+
+A table of summary RMSE values for predicting FMC is found in Table \ref{tab:fmc_results}. The label $exp\_0.01$ corresponds to $\omega=0.01$, and the weight of the $i^{th}$ residual would therefore be $w_i = \exp(-0.01\cdot y_i)$. The weighted loss function with $\omega=0.0367$ had the lowest mean RMSE, but the difference between this and the standard MSE was not statistically significant (p-value of roughly 0.86).
+
+\begin{table}[ht]
+\centering
+\caption{RMSE Results for predicting FMC.}
+\label{tab:fmc_results}
+\begin{tabular}{llrrr}
+\toprule
+ & Loss & Mean & Min & Max \\
+\midrule
+0 & MSE & 3.948 & 1.857 & 7.480 \\
+1 & $\exp\_0.01$ & 3.937 & 1.825 & 7.645 \\
+2 & $\exp\_0.0367$ & 3.935 & 1.790 & 8.097 \\
+3 & $\exp\_0.0633$ & 3.986 & 1.810 & 8.528 \\
+4 & $\exp\_0.09$ & 4.066 & 1.703 & 8.917 \\
+5 & $\exp\_0.1167$ & 4.163 & 1.639 & 9.252 \\
+6 & $\exp\_0.1433$ & 4.297 & 1.580 & 9.534 \\
+7 & $\exp\_0.17$ & 4.448 & 1.583 & 9.853 \\
+8 & $\exp\_0.1967$ & 4.601 & 1.546 & 10.276 \\
+9 & $\exp\_0.2233$ & 4.767 & 1.507 & 10.636 \\
+10 & $\exp\_0.25$ & 4.954 & 1.464 & 11.300 \\
+11 & ROS & 3.962 & 1.800 & 8.523 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+A table of summary RMSE values for predicting ROS is found in Table \ref{tab:ros_results}. The weighted loss function with $\omega=0.0367$ had the lowest mean RMSE, but the difference between this and the standard MSE was not statistically significant (p-value of roughly 0.54).
+
+\begin{table}[ht]
+\centering
+\caption{RMSE Results for predicting ROS.}
+\label{tab:ros_results}
+\begin{tabular}{llrrr}
+\toprule
+\toprule
+ & Loss & Mean & Min & Max \\
+\midrule
+0 & MSE & 5.533e-04 & 2.325e-04 & 1.022e-03 \\
+1 & $\exp\_0.01$ & 5.511e-04 & 2.423e-04 & 1.030e-03 \\
+2 & $\exp\_0.0367$ & 5.477e-04 & 2.341e-04 & 1.054e-03 \\
+3 & $\exp\_0.0633$ & 5.496e-04 & 2.214e-04 & 1.091e-03 \\
+4 & $\exp\_0.09$ & 5.544e-04 & 2.165e-04 & 1.128e-03 \\
+5 & $\exp\_0.1167$ & 5.615e-04 & 2.177e-04 & 1.182e-03 \\
+6 & $\exp\_0.1433$ & 5.730e-04 & 2.138e-04 & 1.197e-03 \\
+7 & $\exp\_0.17$ & 5.865e-04 & 2.112e-04 & 1.227e-03 \\
+8 & $\exp\_0.1967$ & 6.010e-04 & 2.151e-04 & 1.255e-03 \\
+9 & $\exp\_0.2233$ & 6.172e-04 & 2.099e-04 & 1.301e-03 \\
+10 & $\exp\_0.25$ & 6.364e-04 & 2.194e-04 & 1.381e-03 \\
+11 & ROS & 5.484e-04 & 2.219e-04 & 1.085e-03 \\
+\bottomrule
+\bottomrule
+\end{tabular}
+\end{table}
+
+A complete table of results can be found on github at: 
+
+\url{https://github.com/jh-206/Custom-Loss-FMDA}
+
+Figure \ref{fig:results2} shows the RMSE calculations for each of the machine learning models separately.
 
 \begin{figure}[ht]
     \centering
