--- a/ref/fire.bib
+++ b/ref/fire.bib
@@ -119,7 +119,7 @@ to $893 billion each year in economic costs and damages},
   note         = {Accessed: May 31, 2024}
 }
 
-@techreport{NWCG-FireWeather,
+@techreport{NWCG-2024-FWP,
   author       = {NWCG},
   title        = {Fire Weather, {PMS} 425-1},
   institution  = {National Wildfire Coordinating Group},
