--- a/ref/ml.bib
+++ b/ref/ml.bib
@@ -8,15 +8,17 @@
 }
 
 @article{Buch-2022-SML,
-author = {Buch, Jatan and Williams, Alton and Juang, Caroline and Hansen, Winslow and Gentine, Pierre},
-year = {2022},
-month = {11},
-journal = {EGUsphere},
-pages = {1148},
-title = {SMLFire1.0: a stochastic machine learning (SML) model for wildfire activity in the western United States},
-doi = {10.5194/egusphere-2022-1148},
-notes = {Preprint.}
+AUTHOR = {Buch, J. and Williams, A. P. and Juang, C. S. and Hansen, W. D. and Gentine, P.},
+TITLE = {SMLFire1.0: a stochastic machine learning (SML) model for wildfire activity in the western United States},
+JOURNAL = {Geoscientific Model Development},
+VOLUME = {16},
+YEAR = {2023},
+NUMBER = {12},
+PAGES = {3407--3433},
+URL = {https://gmd.copernicus.org/articles/16/3407/2023/},
+DOI = {10.5194/gmd-16-3407-2023}
 }
+
 
 @article{Lu-2021-EMS,
 author = {Lu, Yang and WEI, Chunzhu},
@@ -65,14 +67,6 @@ title = {Predicting Forest Fire Using Remote Sensing Data And Machine Learning},
 journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
 doi = {10.1609/aaai.v35i17.17758}
 }
-
-
-
-
-
-
-
-
 
 @article{McCandless-2020-EWS,
 author = {McCandless, Tyler and Kosovic, Branko and Petzke, William},
